fixed chatbot align

--- a/components/Showcase/ShowComp/AIChat/AIChat.module.scss
+++ b/components/Showcase/ShowComp/AIChat/AIChat.module.scss
@@ -25,7 +25,7 @@
       position: relative;
 
       @media (max-width: 1030px) {
-        height: calc(100vh - 300px);
+        height: calc(100vh - 280px);
       }
 
       .chatConverseAnime {
